# OpenTrace

./: .gitignore  CLAUDE.md  OpenTrace_Roadmap.md  README.md  start.sh
backend/: README.md  pyproject.toml
backend/app/: aggregate.py  attach.py  cli.py  config.py  container.py  db.py  ebpf.py  llm.py  main.py  node_cdp.py  paths.py  perf.py  profile.py  program_output.py  rules_api.py  run_views.py  runs.py  secrets.py  sessions.py  storage.py  streaming.py  summarize.py  terminals.py  tools.py  util.py
backend/app/rules/: __init__.py  custom.py  engine.py  safe_eval.py
backend/app/trace/: __init__.py  events.py  fdresolve.py  ltrace_parser.py  metrics.py  orchestrator.py  strace_parser.py
backend/tests/: conftest.py  test_aggregate.py  test_attach.py  test_container.py  test_crud.py  test_e2e_scenarios.py  test_ebpf.py  test_ltrace_parser.py  test_perf.py  test_pipeline.py  test_profile.py  test_program_output.py  test_rules.py  test_rules_custom.py  test_rules_extended.py  test_rules_monitor.py  test_security.py  test_strace_parser.py  test_summarize.py  test_summarize_context.py  test_tools.py
docs/: ARCHITECTURE.md  OpenTrace_Roadmap.md  Profiling_Roadmap.md  Request_Tracing_Roadmap.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md  layout.md  phase0-checklist.md  phase1-checklist.md  structure.md  testing.md
e2e/: README.md  package.json  run-all.sh  run.js  smoke.js
electron/: main.js  package-lock.json  package.json  preload.js  pty.js
frontend/: index.html  package-lock.json  package.json
test-files/: FileModifier  alloc_demo  alloc_demo.c  testFile.txt  (+10 more)
(+118 files in other folders)
